@@ -7,11 +7,13 @@ plugins {
 }
 
 group 'io.github.thanglequoc'
-version '1.0.2'
+version '1.0.3'
 
 java {
     withJavadocJar()
     withSourcesJar()
+    sourceCompatibility = "11"
+    targetCompatibility = "11"
 }
 
 repositories {
@@ -26,12 +28,15 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.15.2'
+
     testImplementation group: 'ch.qos.logback', name: 'logback-core', version: '1.4.6'
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.6'
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
 
 publishing {
@@ -42,7 +47,7 @@ publishing {
 
             pom {
                 name = 'Timer Ninja'
-                description = 'A handy Java utility to help you evaluate the total execution time of your Java method'
+                description = 'Timer Ninja is a lightweight Java library for measuring method execution time with ease. It provides annotation-based tracking and a flexible API to measure execution time, supports different time units, and visualizes the tracking context in stacktrace tree format.'
                 url = 'https://github.com/ThangLeQuoc/timer-ninja'
                 licenses {
                     license {
